<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">Nanodegree Apps</string>
    <string name="action_settings">Settings</string>

    <!-- Application Names -->
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="football_scores">Football Scores</string>
    <string name="library">Library</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone</string>
</resources>
