<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        style="@style/Title"
        android:text="@string/title"
        />
    <Button
        android:id="@+id/spotify_streamer"
        style="@style/NormalButton"
        android:text="@string/spotify_streamer"
        android:onClick="startSpotifyStreamer"
        />
    <Button
        android:id="@+id/football_scores"
        style="@style/NormalButton"
        android:text="@string/football_scores"
        android:onClick="startFootballScoresApp"
        />
    <Button
        android:id="@+id/library"
        style="@style/NormalButton"
        android:text="@string/library"
        android:onClick="startLibraryApp"
        />
    <Button
        android:id="@+id/build_it_bigger"
        style="@style/NormalButton"
        android:text="@string/build_it_bigger"
        android:onClick="startBuildItBigger"
        />
    <Button
        android:id="@+id/xyz_reader"
        style="@style/NormalButton"
        android:text="@string/xyz_reader"
        android:onClick="startXYZReader"
        />
    <Button
        android:id="@+id/capstone"
        style="@style/AccentButton"
        android:text="@string/capstone"
        android:onClick="startCapstone"
        />
</LinearLayout>
